kubernetes-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: prod-issuer
    nginx.org/redirect-to-https: "true"
    nginx.org/ssl-services: kubernetes-dashboard
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - DASHBOARD_SUBDOMAIN.DOMAIN
    secretName: tls-DOMAIN-dashboard
  rules:
  - host: DASHBOARD_SUBDOMAIN.DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
